--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
   http: ^0.12.2
+  shared_preferences: ^0.5.6
 
 
   # The following adds the Cupertino Icons font to your application.
